@@ -7,6 +7,7 @@ import com.l3.logparser.pnr.service.PnrExtractionService;
 import com.l3.logparser.pnr.model.PnrMessage;
 import com.l3.logparser.pnr.model.PnrFlightDetails;
 import com.l3.logparser.enums.DataType;
+import com.l3.common.util.VersionUtil;
 import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -19,13 +20,19 @@ import javafx.stage.DirectoryChooser;
 import javafx.stage.Stage;
 
 import java.io.File;
+import java.io.IOException;
 import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.ResourceBundle;
-import java.util.function.Consumer;
+
 
 /**
  * Controller for the Message Extractor UI
@@ -36,7 +43,7 @@ public class MessageExtractorController implements Initializable {
     @FXML private TextField logDirectoryField;
     @FXML private Button browseButton;
     @FXML private TextField flightNumberField;
-    @FXML private TextField departureDateField;
+    @FXML private DatePicker departureDatePicker;
     @FXML private TextField departureAirportField;
     @FXML private TextField arrivalAirportField;
     @FXML private ComboBox<DataType> dataTypeComboBox;
@@ -46,6 +53,7 @@ public class MessageExtractorController implements Initializable {
     @FXML private TextField outputDirectoryField;
     @FXML private Button browseOutputButton;
     @FXML private ToggleButton debugToggleButton;
+    @FXML private ToggleButton multiNodeToggleButton;
 
     // Results area
     @FXML private TableView<MessageTableRow> resultsTable;
@@ -62,11 +70,13 @@ public class MessageExtractorController implements Initializable {
     @FXML private ProgressBar progressBar;
     @FXML private Label statusLabel;
     @FXML private Label summaryLabel;
+    @FXML private Label versionLabel;
 
     private MessageExtractionService messageExtractionService;
     private PnrExtractionService pnrExtractionService;
     private MessageExtractionService.ExtractionResult lastResult;
     private boolean debugMode = false;
+    private boolean multiNodeMode = true;
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
@@ -76,6 +86,11 @@ public class MessageExtractorController implements Initializable {
         setupTableSelection();
         setupUI();
         setupDataTypeComboBox();
+
+        // Set version label
+        if (versionLabel != null) {
+            versionLabel.setText(VersionUtil.getFormattedVersion());
+        }
     }
 
     @FXML
@@ -87,6 +102,18 @@ public class MessageExtractorController implements Initializable {
         } else {
             debugToggleButton.setText("OFF");
             addLogMessage("Debug mode disabled.");
+        }
+    }
+
+    @FXML
+    private void onMultiNodeToggle() {
+        multiNodeMode = multiNodeToggleButton.isSelected();
+        if (multiNodeMode) {
+            multiNodeToggleButton.setText("Multi-node ON");
+            addLogMessage("Multi-Node mode enabled.");
+        } else {
+            multiNodeToggleButton.setText("Multi-node OFF");
+            addLogMessage("Multi-Node mode disabled.");
         }
     }
 
@@ -135,16 +162,52 @@ public class MessageExtractorController implements Initializable {
         statusLabel.setText("Ready");
 
         // Set placeholder text
-        departureDateField.setPromptText("YYMMDD (e.g., 250814)");
         flightNumberField.setPromptText("e.g., MS775");
         departureAirportField.setPromptText("e.g., CAI");
         arrivalAirportField.setPromptText("e.g., DUB");
+        departureDatePicker.setPromptText("Select departure date");
+
+        // Initialize multi-node toggle to ON by default
+        multiNodeToggleButton.setSelected(true);
     }
 
     private void setupDataTypeComboBox() {
         dataTypeComboBox.setItems(FXCollections.observableArrayList(DataType.values()));
         dataTypeComboBox.setValue(DataType.API); // Default to API for backward compatibility
         dataTypeComboBox.setPromptText("Select data type to extract");
+    }
+
+    /**
+     * Converts LocalDate to the appropriate format based on DataType
+     * @param date The LocalDate from the DatePicker
+     * @param dataType The selected DataType (API or PNR)
+     * @return Formatted date string: YYMMDD for API, DDMMYY for PNR
+     */
+    private String formatDateForDataType(LocalDate date, DataType dataType) {
+        if (date == null) {
+            return "";
+        }
+
+        DateTimeFormatter apiFormatter = DateTimeFormatter.ofPattern("yyMMdd");  // YYMMDD format for API
+        DateTimeFormatter pnrFormatter = DateTimeFormatter.ofPattern("ddMMyy");  // DDMMYY format for PNR
+
+        switch (dataType) {
+            case API:
+                return date.format(apiFormatter);
+            case PNR:
+                return date.format(pnrFormatter);
+            default:
+                return date.format(apiFormatter); // Default to API format
+        }
+    }
+
+    /**
+     * Validates if the selected date is not null
+     * @param date The LocalDate from the DatePicker
+     * @return true if date is valid, false otherwise
+     */
+    private boolean isValidDate(LocalDate date) {
+        return date != null;
     }
 
     @FXML
@@ -173,7 +236,7 @@ public class MessageExtractorController implements Initializable {
     private void onProcessLogs() {
         String logDirectory = logDirectoryField.getText().trim();
         String flightNumber = flightNumberField.getText().trim();
-        String departureDate = departureDateField.getText().trim();
+        LocalDate selectedDate = departureDatePicker.getValue();
         String departureAirport = departureAirportField.getText().trim();
         String arrivalAirport = arrivalAirportField.getText().trim();
         DataType selectedDataType = dataTypeComboBox.getValue();
@@ -188,22 +251,46 @@ public class MessageExtractorController implements Initializable {
             return;
         }
 
+        if (!isValidDate(selectedDate)) {
+            showAlert("Error", "Please select a departure date");
+            return;
+        }
+
         if (selectedDataType == null) {
             showAlert("Error", "Please select a data type to extract");
             return;
         }
 
+        // Handle multi-node mode: consolidate logs if enabled
+        String actualLogDirectory = logDirectory;
+        if (multiNodeMode) {
+            addLogMessage("Multi-node mode is enabled. Consolidating logs from n1, n2, n3 folders...");
+            String consolidatedPath = consolidateMultiNodeLogs(logDirectory);
+            if (consolidatedPath != null) {
+                actualLogDirectory = consolidatedPath;
+                addLogMessage("Using consolidated logs directory: " + actualLogDirectory);
+            } else {
+                showAlert("Error", "Failed to consolidate multi-node logs. Please check that n1, n2, n3 folders exist in the selected directory.");
+                return;
+            }
+        }
+
+        // Convert date to appropriate format based on data type
+        String formattedDate = formatDateForDataType(selectedDate, selectedDataType);
+        addLogMessage("Selected date: " + selectedDate + " formatted as: " + formattedDate + " for " + selectedDataType.getDisplayName());
+
         // Clear previous results
         clearResults();
 
         // Create and run extraction task
+        final String finalLogDirectory = actualLogDirectory;
         Task<MessageExtractionService.ExtractionResult> task = new Task<MessageExtractionService.ExtractionResult>() {
             @Override
             protected MessageExtractionService.ExtractionResult call() throws Exception {
                 if (selectedDataType == DataType.PNR) {
                     // Use PNR service for proper filtering and analysis
                     PnrExtractionService.PnrExtractionResult pnrResult = pnrExtractionService.extractPnrMessages(
-                        logDirectory, flightNumber, departureDate, departureAirport, arrivalAirport);
+                        finalLogDirectory, flightNumber, formattedDate, departureAirport, arrivalAirport);
 
                     // Convert PNR result to generic result format
                     MessageExtractionService.ExtractionResult genericResult =
@@ -227,7 +314,7 @@ public class MessageExtractorController implements Initializable {
                 } else {
                     // Use generic service for other data types
                     return messageExtractionService.extractMessages(
-                        logDirectory, flightNumber, departureDate, departureAirport, arrivalAirport, selectedDataType,
+                        finalLogDirectory, flightNumber, formattedDate, departureAirport, arrivalAirport, selectedDataType,
                         debugMode, (msg) -> Platform.runLater(() -> addLogMessage(msg)));
                 }
             }
@@ -264,12 +351,127 @@ public class MessageExtractorController implements Initializable {
         thread.start();
     }
 
+    /**
+     * Consolidates logs from n1, n2, n3 folders into a single consolidated logs directory
+     * @param baseDirectory The directory containing n1, n2, n3 folders
+     * @return The path to the consolidated logs directory, or null if consolidation failed
+     */
+    private String consolidateMultiNodeLogs(String baseDirectory) {
+        try {
+            Path basePath = Paths.get(baseDirectory);
+            Path consolidatedPath = basePath.resolve("consolidated logs");
+
+            // Create consolidated logs directory if it doesn't exist
+            if (!Files.exists(consolidatedPath)) {
+                Files.createDirectories(consolidatedPath);
+                addLogMessage("Created consolidated logs directory: " + consolidatedPath);
+            } else {
+                // Clear existing consolidated logs to ensure fresh consolidation
+                try (var stream = Files.walk(consolidatedPath)) {
+                    stream.filter(Files::isRegularFile)
+                          .forEach(file -> {
+                              try {
+                                  Files.delete(file);
+                              } catch (IOException e) {
+                                  addLogMessage("Warning: Could not delete existing file: " + file.getFileName());
+                              }
+                          });
+                }
+                addLogMessage("Cleared existing consolidated logs directory");
+            }
+
+            String[] nodeNames = {"n1", "n2", "n3"};
+            int totalFilesCopied = 0;
+
+            for (String nodeName : nodeNames) {
+                Path nodePath = basePath.resolve(nodeName);
+                if (Files.exists(nodePath) && Files.isDirectory(nodePath)) {
+                    addLogMessage("Processing node: " + nodeName);
+                    int nodeFileCount = consolidateNodeLogs(nodePath, consolidatedPath, nodeName);
+                    totalFilesCopied += nodeFileCount;
+                    addLogMessage("Copied " + nodeFileCount + " files from " + nodeName);
+                } else {
+                    addLogMessage("Warning: Node directory not found: " + nodePath);
+                }
+            }
+
+            if (totalFilesCopied > 0) {
+                addLogMessage("Successfully consolidated " + totalFilesCopied + " log files from multiple nodes");
+                return consolidatedPath.toString();
+            } else {
+                addLogMessage("No log files found to consolidate");
+                return null;
+            }
+
+        } catch (IOException e) {
+            addLogMessage("Error consolidating multi-node logs: " + e.getMessage());
+            return null;
+        }
+    }
+
+    /**
+     * Consolidates log files from a single node directory
+     * @param nodePath Path to the node directory (n1, n2, or n3)
+     * @param consolidatedPath Path to the consolidated logs directory
+     * @param nodeName Name of the node (n1, n2, or n3)
+     * @return Number of files copied
+     */
+    private int consolidateNodeLogs(Path nodePath, Path consolidatedPath, String nodeName) throws IOException {
+        int fileCount = 0;
+
+        try (var stream = Files.walk(nodePath)) {
+            var logFiles = stream
+                .filter(Files::isRegularFile)
+                .filter(file -> {
+                    String fileName = file.getFileName().toString().toLowerCase();
+                    return fileName.startsWith("das.log") ||
+                           fileName.startsWith("messagetypeb.log") ||
+                           fileName.startsWith("messageapi.log") ||
+                           fileName.startsWith("messageforwarder.log") ||
+                           fileName.startsWith("messagemhpnrgov.log");
+                })
+                .toList();
+
+            for (Path logFile : logFiles) {
+                String originalFileName = logFile.getFileName().toString();
+
+                // Handle log files which may have extensions like .log.1, .log.2 etc. or just .log
+                String nameWithoutExtension;
+                String extension;
+
+                int lastDotIndex = originalFileName.lastIndexOf('.');
+                if (lastDotIndex > 0) {
+                    nameWithoutExtension = originalFileName.substring(0, lastDotIndex);
+                    extension = originalFileName.substring(lastDotIndex);
+                } else {
+                    // No extension found
+                    nameWithoutExtension = originalFileName;
+                    extension = "";
+                }
+
+                // Append node name to the filename
+                String newFileName = nameWithoutExtension + "_" + nodeName + extension;
+                Path targetFile = consolidatedPath.resolve(newFileName);
+
+                // Copy file to consolidated directory with new name
+                Files.copy(logFile, targetFile, StandardCopyOption.REPLACE_EXISTING);
+                fileCount++;
+
+                if (debugMode) {
+                    addLogMessage("Copied: " + originalFileName + " -> " + newFileName);
+                }
+            }
+        }
+
+        return fileCount;
+    }
+
     @FXML
     private void onClearAll() {
         // Clear all input fields
         logDirectoryField.clear();
         flightNumberField.clear();
-        departureDateField.clear();
+        departureDatePicker.setValue(null);
         departureAirportField.clear();
         arrivalAirportField.clear();
         outputDirectoryField.clear();
@@ -418,7 +620,7 @@ public class MessageExtractorController implements Initializable {
                     // Then sort by part number
                     return Integer.compare(m1.getPartNumber(), m2.getPartNumber());
                 })
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
 
         // Populate results table with sorted messages
         ObservableList<MessageTableRow> tableData = FXCollections.observableArrayList();
